--- a/src/app/grid/gridConfigAction/gridConfigurationAction.component.scss
+++ b/src/app/grid/gridConfigAction/gridConfigurationAction.component.scss
@@ -1,1 +1,18 @@
 @import "../../../styles.scss";
+
+.menu-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 1rem;
+    padding-right: 0.2rem;
+    align-items: center;
+    color: $primary_color_darkest;
+    font-weight: 600;
+}
+
+::ng-deep .mat-icon {
+    font-size: 2rem;
+    margin-right: 0.4rem;
+    color:$primary_color_darkest;
+}
