--- a/src/scss/base/_toolbar.scss
+++ b/src/scss/base/_toolbar.scss
@@ -9,7 +9,9 @@
     color: $white_color;
     font-weight: 600;
     font-size: $font-size;
-  
+    position: fixed;
+    width: 100vw;
+    z-index: 2;
     img {
       padding: 0 0.4rem;
     }
@@ -52,5 +54,7 @@
   
   .content {
     padding: 1rem;
+    margin-top: 4rem;
+    position: absolute;
   }
   
