--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -38,7 +38,7 @@ html,body {
   background: $primary_color_darkest;
 }
 
-::ng-deep .mat-icon {
+ .mat-icon {
   vertical-align: middle;
   font-size: 1.4rem;
 }
