--- a/src/app/quickMenu/quickMenu.component.scss
+++ b/src/app/quickMenu/quickMenu.component.scss
@@ -11,11 +11,11 @@
     font-weight: 600;
 }
 
-::ng-deep .mat-menu-item .mat-icon {
+ .mat-menu-item .mat-icon {
     padding: 0px;
     margin: 0px;
 }
 
-::ng-deep .mat-menu-panel {
+ .mat-menu-panel {
     width:16rem;
 }
