--- a/src/scss/base/_toolbar.scss
+++ b/src/scss/base/_toolbar.scss
@@ -26,7 +26,7 @@
         margin: 0px;
         padding-left: 0.8rem;
         cursor: pointer;
-  
+        font-weight: 600;
       }
     }
   
@@ -40,7 +40,8 @@
         padding: 0px;
         padding-right: 0.2rem;
         cursor: pointer;
-  
+        font-weight: 600;
+
         &:last-child {
           padding-right: 0.5rem;
         }
