--- a/src/scss/components/_progressBar.scss
+++ b/src/scss/components/_progressBar.scss
@@ -4,14 +4,14 @@
   padding: 1rem;
 }
 
-::ng-deep .mat-progress-bar-fill::after {
+ .mat-progress-bar-fill::after {
     background-color: $primary_color;
 }
 
-::ng-deep .mat-progress-bar-buffer {
+ .mat-progress-bar-buffer {
     background: $primary_color_lighter;
 }
 
-::ng-deep .mat-progress-bar {
+ .mat-progress-bar {
     border-radius: 2px;
 }
