--- a/src/app/quickMenu/quickMenu.component.html
+++ b/src/app/quickMenu/quickMenu.component.html
@@ -9,7 +9,7 @@
     </span>
     <span *ngIf="!child.children || child.children.length === 0">
       <button mat-menu-item class="quick-item">
-        <span routerLink="child.textRoute">{{child.text}}</span>
+        <span [routerLink]="child.textRoute">{{child.text}}</span>
         <mat-icon (click)="openDialog(child.iconDialog,child.text)">{{ child.icon }}</mat-icon>
       </button>
     </span>
