--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -17,7 +17,7 @@ html,body {
     margin: 0rem;
     padding: 0rem;
     box-sizing: border-box;
-    font-size: $default-font-size;
+    // font-size: $default-font-size;
 }
 
 ::-webkit-scrollbar {
