--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -4,6 +4,6 @@
     <grid #grid [selectedData]="selectedRowData" [data]="data" [addIconActions]="addIconActions"
         [columnDefs]="columnDefs" [rowsPerPage]="rowsPerPage" [resultSize]="resultSize"
         [noRowsTemplate]="noRowsTemplate" (selectedRowData)="setSelectedRowData($event)"
-        (pageChange)="onPageChange($event)" (onSaveColDef)="saveColDef($event)" (onResetColDef)="resetColDef($event)">
+        (pageChange)="onPageChange($event)" [currentDensity]="currentDensity" (onSaveColDef)="saveColDef($event)" (onResetColDef)="resetColDef($event)">
     </grid>
 </div>
