--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -2,14 +2,13 @@
 <div class="pagination-panel">
   <mat-paginator [length]="resultSize" [pageSize]="rowsPerPage" [pageSizeOptions]="[5, 10, 25, 100]" pageIndex="0"
     (page)="onPageSizeChanged($event)"></mat-paginator>
-  <grid-config-action [addIconActions]="addIconActions" [columnDefs]="columnDefs" (downloadCSV)="onDownloadCSV($event)"
+  <grid-config-action [addIconActions]="addIconActions" [columnDefs]="columnDefs" [currentDensity]="currentDensity" (downloadCSV)="onDownloadCSV($event)"
     (downloadExcel)="onDownloadExcel($event)" (onColDefChange)="onColDefChange($event)"
-    (onSaveColDef)="saveColDef($event)" (onResetColDef)="resetColDef($event)"></grid-config-action>
+    (onSaveColDef)="saveColDef($event)" (onResetColDef)="resetColDef($event)" (onSetDensity)="setDensity($event)"></grid-config-action>
 </div>
-<ag-grid-angular style="height: 600px;" class="ag-theme-alpine" [columnDefs]="columnDefs"
+<ag-grid-angular [ngStyle]="density" class="ag-theme-alpine" [columnDefs]="columnDefs"
   [defaultColDef]="defaultColDef" [suppressRowClickSelection]="true" [overlayNoRowsTemplate]="noRowsTemplateValue"
   [groupSelectsChildren]="true" [rowSelection]="rowSelection" [rowGroupPanelShow]="rowGroupPanelShow"
   [pivotPanelShow]="pivotPanelShow" [paginationPageSize]="rowsPerPage" [rowData]="data" [animateRows]="true"
   (gridReady)="onGridReady($event)" groupDisplayType="groupRows" [rowMultiSelectWithClick]="true"
   [groupDefaultExpanded]="groupDefaultExpanded"></ag-grid-angular>
-<!-- (rowSelected)="onRowSelected($event)" (selectionChanged)="onSelectionChanged($event)" -->
