--- a/src/app/mainComponent/pricing/PriceBookNameCell/priceBookNameCell.component.html
+++ b/src/app/mainComponent/pricing/PriceBookNameCell/priceBookNameCell.component.html
@@ -1,6 +1,6 @@
 <div class="primary-cell">
     <div class="left-side">
-        <a routerLink="/">{{value.serviceName}}</a>
+        <a routerLink="/">{{value.planName}}</a>
         <span class="action-panel">
             <mat-icon aria-label="edit" matTooltip="edit" class="action"
                 (click)="edit()">edit</mat-icon>
