--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="toolbar" role="banner">
   <div class="left-toolbar">
-    <img width="80" [src]="logo">
+    <img width="80" src="assets/img/blulogix.png">
 
     <span class="menu-item" *ngFor="let item of navItems">
 
